# Bachelor_Thesis_Mental_Health_Chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  template.sh
Wye_api/: app_factory.py  config.py  main.py  pyproject.toml  security.py  socket_server.py
Wye_api/controller/: __init__.py  auth_controller.py  chat_controller.py
Wye_api/db/: __init__.py  setup_collections.py
Wye_api/routes/: auth.py  chat.py
Wye_api/schemas/: chat.py  users.py
Wye_api/service/: __init__.py  auth_service.py  chat_service.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  chat_progress.py  config.py  loclog.py  main.py
backend/app/admin/: pdf_corpus.py  settings_snapshot.py  vector_cleanup.py
backend/app/api/: admin_routes.py  auth_routes.py  mcp_routes.py  medical_handlers.py  routes.py  ws_routes.py
backend/app/auth/: dependencies.py  email.py  password_reset.py  repository.py  security.py
backend/app/cache/: chat_rate_limit.py  redis_client.py  session_memory.py  therapy_flags.py  user_memory.py
backend/app/content/: script_bank.json
backend/app/conversation/: __init__.py  context.py  episodic_memory.py  idle_finalize.py  summary.py  summary_markdown.py  title.py  user_memory.py
backend/app/crawl/: __init__.py  chunking.py  extract.py  feeds.py  keywords.py  models.py  pipeline.py  research.py  rss.py  site_sources.py  staging.py  web_ingest.py
backend/app/db/: client.py  repository.py
backend/app/graph/: __init__.py  conversation_title.py  conversation_ui.py  crisis_escalation.py  dynamic_quick_replies.py  guided_quick_replies.py  safety_engine.py  script_bank.py  workflow.py
backend/app/handoff/: __init__.py  escalate.py  messages.py  service.py
backend/app/llm/: __init__.py  factory.py  openai_platform_usage.py
backend/app/mcp/: external_client.py  server.py
backend/app/medical/: __init__.py  config.py  embeddings.py  ingest.py  llm.py  prompts.py  rag_catalog.py  service.py  validation_input.py  workflow.py
backend/app/personalization/: __init__.py  context.py
backend/app/rag/: corpus.py  embeddings.py  retriever.py
backend/app/screening/: __init__.py  phq.py
backend/app/speech/: elevenlabs_stt.py
backend/app/storage/: cloudinary.py
backend/app/wellness/: __init__.py  activity_profile.py  catalog_seed.py  conversation_state.py  emotion_scores.py  recommendation_engine.py  (+2 more)
backend/evals/: cases.json  run_eval.py
backend/evaluation/: build_eval_dataset.py  filter_mental_health.py  run_ragas_eval.py  run_retrieval_eval.py  topic_filter.py
backend/scripts/: crawl_mental_health.py  create_admin_user.py  migrate_qdrant_local_to_cloud.py  seed_vectorstore.py  seed_wellness_activities.py
backend/tests/: test_activity_rating.py  test_admin_routes.py  test_auth.py  test_auth_dependencies.py  test_content_processor_chunking.py  test_conversation_context.py  test_conversation_ui.py  test_corpus.py  test_crawl_keywords.py  test_crawl_staging.py  test_crisis_escalation.py  test_dynamic_quick_replies.py  test_emotion_scores.py  test_external_mcp_client.py  test_factory.py  test_graph_routes.py  test_guardrails_language.py  test_guided_quick_replies.py  test_memory_update.py  test_objection_detector.py  test_password_reset.py  test_personalization_context.py  test_phq.py  test_qdrant_client_cache.py  test_rag_catalog.py  test_recommendation_engine.py  test_response_filter.py  test_response_generator.py  test_safety_engine.py  test_script_bank.py  test_session_memory_personalization.py  test_structured_output.py  test_suggestions.py  test_therapy_router.py  test_vector_cleanup.py  test_web_ingest.py  test_wellness_retrieval.py  test_wellness_routing.py  test_wellness_vectorstore.py
(+236 files in other folders)
