[project]
name = "wye-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.6",
    "motor>=3.7.1",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.44.0",
]
